fix: fix cards icons overlap and card actions direction when <md

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -30,7 +30,7 @@
   height: 40%;
 }
 .card__footer {
-  padding: .7rem;
+  padding: 0.7rem;
   height: 25%;
 }
 .card__image {
@@ -48,7 +48,8 @@
 .card__icons {
   width: 100%;
   background-color: #5c8374;
-  min-height: 5rem;
+  max-height: 5rem;
+  overflow-y: scroll;
   color: #e5e5e5;
   display: flex;
   justify-content: center;
@@ -78,7 +79,7 @@
   transform: translate(-50%, -50%);
   visibility: hidden;
 }
-.card__icon:hover{
+.card__icon:hover {
   font-size: 3rem;
   transition: all 0.15s ease-in;
 }
@@ -100,6 +101,7 @@
   padding: 0.7rem;
   display: flex;
   justify-content: center;
+  flex-direction: column;
   gap: 1rem;
 }
 .card__button {
@@ -140,11 +142,15 @@
     justify-content: center;
   }
   .projects__card {
-    width: 30%;
+    width: 32%;
+  }
+
+  .card__actions {
+    flex-direction: row;
   }
 }
 @media (min-width: 1024px) {
-  .projects{
+  .projects {
     padding: 2rem;
   }
   .card__header {
@@ -153,7 +159,7 @@
   .card__body {
     height: 40%;
   }
-  .card__title{
+  .card__title {
     height: 35%;
   }
 }
